--- a/Oicapps/index.html
+++ b/Oicapps/index.html
@@ -26,7 +26,7 @@
                 <span class="abinaya-logo">ABINAYA </span>
             </a>
 
-            <button class="navbar-toggler justify-content-end" type="button" data-bs-toggle="collapse"
+            <button class="navbar-toggler navbar-light justify-content-end" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
